// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orb with the same id can not be added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: \\"2.1\\"
orbs:
  hello: world:2.0
workflows:
  workflow1:
    jobs:
      - job1:
          context:
            - context1
"
`;

exports[`workflow needs to have jobs assigned 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: \\"2.1\\"
orbs:
  hello: world:2.0
workflows:
  workflow1:
    jobs:
      - job1:
          context:
            - context1
      - job2:
          name: customName2
  workflow3:
    jobs:
      - job3:
          context:
            - context3
"
`;
